# paged-kv-attention-kernel-lab

./: .gitignore  ACCEPTANCE_CRITERIA.md  AGENTS.md  README.md  RESUME_SNIPPETS.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/results/: decode_attention_flashinfer.csv  decode_attention_flashinfer_cuda13.csv  decode_attention_main.csv  decode_attention_program_saturation.csv  pytorch_paged_reference_smoke.csv  split_kv_equal_work.csv  split_kv_same_shape.csv
docs/: benchmark-results.md  env-notes.md  learning-syllabus.md  machine-info.md  profiling-report.md  reading-list.md  sync-workflow.md  week0-prep.md  week1-structure.md
docs/lab-notes/: week0.md  week1.md  week2.md  week4.md  week5.md
note/: benchmark-fundamentals.md  dense-decode-attention-implementation.md  online-softmax.md  pytorch-syntax-reference.md  reference-stage-attention-kv-cache.md  reference-stage-testing.md  triton-dense-decode.md  triton-paged-indexing.md  triton-syntax-reference.md  triton-vs-pytorch.md
scripts/: benchmark_download_sources.py  check_env.sh  collect_machine_info.sh  flashinfer_smoke.py  gpu_smoke.py  plot_benchmarks.py  profile_decode_attention.py  run_benchmarks.py  run_benchmarks.sh  run_equal_work_benchmark.py  run_split_kv_benchmarks.py  run_tests.sh  sync_from_remote.sh  sync_to_remote.sh
src/paged_kv_attention/: __init__.py  benchmark_utils.py  block_table.py  flashinfer_baseline.py  layouts.py  reference.py  triton_decode.py
tests/: test_benchmark_utils.py  test_download_source_benchmark.py  test_flashinfer_baseline.py  test_import.py  test_reference.py  test_reference_contracts.py  test_split_kv_dispatch.py  test_triton_decode.py  test_week1_scaffold.py
