[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paged-kv-attention-kernel-lab"
version = "0.0.0"
description = "Paged-KV attention kernel lab for LLM decode inference experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "torch==2.8.0+cu128",
    "triton==3.4.0; platform_system == 'Linux'",
]

[dependency-groups]
dev = [
    "ninja>=1.11",
    "pytest>=8",
    "ruff>=0.5",
]
plot = [
    "matplotlib>=3.9",
]
baseline = [
    "flashinfer-python==0.6.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: requires a CUDA-capable GPU",
]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[[tool.uv.index]]
name = "tuna-pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
